# Nucleo-H743ZI

./: .gitignore  CMakeLists.txt  README.md  StratifyLocalSettings.json  StratifySettings.json  sl_settings.json
boot/: boot_config.c  boot_link_config.c
src/: CMakeLists.txt  SystemClock_Config.c  board_config.c  board_config.h  config.h  link_config.c  mcu_config.c  sl_config.h  sos_config.c
